Fix the fractal hrs
Image was getting clipped at the top

--- a/source/stylesheets/components/_hr.scss
+++ b/source/stylesheets/components/_hr.scss
@@ -9,6 +9,7 @@
   padding-bottom: 0;
   height: 1rem;
   margin: 0.75rem auto 0.25rem auto;
+  overflow: visible;
 
   &:after {
     display: inline-block;
